--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
-title: Site Title
+title: My Website!!!!!!!
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal Website!!!!!
 permalink: '/:title/'
 
 # Author settings
-author: Your Name # add your name
+author: Laura Wachter # add your name
 author-pic: yosh-ginsu.jpg
-about-author: About you
+about-author: Me!!!!!
 
 # Contact links
-email: # Add your Email address
-phone: # Add your Phone number
+email: lw681@scarletmail.rutgers.edu
+phone: (203) 605-1445 (don't call me)
 website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: #Add your Github handle
